# R_PIPELINE

./: .gitattributes  .merge-policy.yaml  .pre-commit-config.yaml  AGENTS.md  AI Coding Guardrails.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  GEMINI.md  Gaurd1.md  ID-centric design that binds workstreams.md  MODIFICATION_PLAN_GUIDE.md  QUICK_REFERENCE.md  README.md  agentic_modification_plan_machine_first_template_ai_usage_guide.md  bootstrap_guardrails.ps1  code-quality.md  error-handling.md  execution-model.md  filemapping.json  gaurd2.md  gaurd3.md  gaurd4.md  modification_plan_proven_patterns.yaml  plan_validation_report.md  router-determinism.md  test-gap-report.md  testResults.xml  testing-guide.md  testing.md  workflow-enhancements.md
.mcp/: access_groups.json  mcp_servers.json
AIUOKEEP_Implementation_Files/: Connect Claude Code to tools via MCP.md
AIUOKEEP_Implementation_Files/templates/python/: pyproject.toml  python_cli.py  test_template.py
CI_Pre_Commit_Integrator_Wires_gating_rules_into_hooks_and_pipelines_to_block_merges_without_fresh_verified_outputs/: deterministic_git_guide.md  policy-check.yml  powershell-verify.yml  python-verify.yml  quality.yml  sast-secrets.yml  typescript-verify.yml
Caching_Rate_Limiter_Mirrors_raw_API_payloads_dedupes_queries_and_respects_rate_limits_backoff/: MCP_INTEGRATION.md
Concurrency_Controller_Caps_parallel_jobs_manages_work_queue_fairness_and_prevents_resource_thrash/: streamlined_workflow_blueprint.md
watcher/: .gitignore  PSScriptAnalyzer.psd1  README.md  build.ps1  consumer.py  py_check.py  pyproject.toml  test_sample.Tests.ps1  test_sample.ps1  watch.config.json  watch.ignore  watch.ps1
watcher/tests/: test_py_check.py
(+280 files in other folders)
